set minimum sdk level to 15 remove legacy article layout